--- a/default/assets/css/theme.css
+++ b/default/assets/css/theme.css
@@ -8,4 +8,5 @@ be retained to maintain auto switching dark mode. */
 
 body {
     font-family: Comic Sans MS, Comic Sans, cursive;
+    background-color: aquamarine;
 }
